# podcast-pipeline

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
infrastructure/: __init__.py  config.py  health_checks.py  mcp_client.py  mcp_wrappers.py
project_documentation/: EXECUTION_USAGE.md  M1_IMPLEMENTATION_PLAN.md  MCP_SERVERS.md  PRD.md  TDD.md
scripts/: resample_dataset.py  segment_and_prep.py
tests/: __init__.py
tests/fixtures/: __init__.py  infrastructure_fixtures.py  mcp_fixtures.py  mocks.py
tests/integration_tests/: MOCK_MODE.md  PHASE2_COMPLETE.md  README.md  conftest.py  test_integration_pipeline.py  test_mcp_client_example.py
voice-dataset-kit/cli/: build_dataset.py  reviewer.py
voice-dataset-kit/tools/audio/: segment.py  speaker.py
voice-dataset-kit/voice-dataset-kit/cli/: build_dataset.py
voice-dataset-kit/voice-dataset-kit/tools/audio/: qc.py
voice-dataset-kit/voice-dataset-kit/tools/util/: io.py
voice_dataset_kit/: README.md  __init__.py  __main__.py
voice_dataset_kit/cli/: __init__.py  build_dataset.py  reviewer.py
voice_dataset_kit/tools/audio/: segment.py  speaker.py
voice_dataset_kit/tools/subtitles/: parse.py
voice_dataset_kit/tools/util/: splits.py
